--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,9 @@
   "ts-node": {
     "files": true
   },
+  "files": [
+    "typings/custom-mongo.d.ts"
+  ],
   "compilerOptions": {
     "module": "commonjs",
     "declaration": true,
