--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a benchmark which checks the difference in performance between documents with indexes & without in mongodb.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "benchmark": "ts-node -r dotenv/config src/index.ts dotenv_config_path=.env",
+    "benchmark": "ts-node src/index.ts",
     "dev": "nodemon",
     "db:seed": "ts-node -r dotenv/config src/database/seeds/push-books.ts dotenv_config_path=.env",
     "db:indexes:init": "ts-node -r dotenv/config src/database/seeds/init-indexes.ts dotenv_config_path=.env",
@@ -32,6 +32,7 @@
     "eslint-config-prettier": "6.10.0",
     "eslint-plugin-import": "2.20.1",
     "prettier": "1.19.1",
+    "ts-node": "9.1.1",
     "typescript": "4.2.4"
   },
   "dependencies": {
